syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mycompany.myapp.grpc";

import "google/protobuf/empty.proto";

package com.mycompany.myapp;

service LoggersService {
    rpc GetLoggers(google.protobuf.Empty) returns (stream Logger);
    rpc ChangeLevel(Logger) returns (google.protobuf.Empty);
}

enum Level {
    UNDEFINED = 0;
    OFF = 1;
    FATAL = 2;
    ERROR = 3;
    WARN = 4;
    INFO = 5;
    DEBUG = 6;
    TRACE = 7;
    ALL = 8;
}

message Logger {
    string name = 1;
    Level level = 2;
}
